--- a/01. JS Practice/01. function.md
+++ b/01. JS Practice/01. function.md
@@ -1,9 +1,13 @@
-# Introduction to Functional JS
+## Introduction to Functional JS
 # TOC
 ```
--callback function
--Arrow Function
-
+1. callback function
+2. Arrow Function
+3. forEach
+4. filter
+5. map
+6. reduce
+7. find
 ```
 ## normal function
 ```js
