--- a/04. Extension/02. sidepanel.md
+++ b/04. Extension/02. sidepanel.md
@@ -1,8 +1,12 @@
-## background.js
+## SidePanel
+```
+Sidepanel is a technique open extension interface in browser side instead of popup
+```
+### background.js
 ```js
 chrome.sidePanel.setPanelBehavior({ openPanelOnActionClick: true });
 ```
-## manifest.json
+### manifest.json
 ```json
 {
     "permissions": [
