--- a/04. Extension/03. popup_bg_js.md
+++ b/04. Extension/03. popup_bg_js.md
@@ -1,1 +1,45 @@
+## popup.js & background.js
+```
+popup.js      : directly work always with popup or sidepanel UI DOM
+background.js : work behind the seem independently, mainly uses for API call, or others,
+                It can interact with any DOM. But can access all chrome API, event
+                `chrome.runtime` API can communicate with popup or web page DOM
+                need to define "background" in manifest.json
+content.js    : directly work with webpage DOM, need to define "content_scripts" in manifest.json
+```
+### 01. popup.js
+```html
+<body>
+    <script src="../scripts/popup.js"></script>
+</body>
+```
+```js
+// popup.js
+// pass a message to background JS via `chrome.runtime`
+document.getElementById('login').addEventListener('click', () => {
+    const username = document.getElementById("username")
+    const password = document.getElementById("password")
+    chrome.runtime.sendMessage({ action: 'login', username:username, password:password }, (response)=>{
+         if
+       });
+});
+```
+### 02. background.js
+```json
+// manifest.json
+{
+    "background": {"service_worker": "./scripts/background.js"},
+}
+```
+```js
+chrome.runtime.onMessage.addListener((message, sender, sendResponse) => {
+    if (message.action === 'login') {
+        const username = message.username
+        const password = message.password
+        // loginUser(username, password);
+    }
+});
+```
+
+
 
