--- a/04. Extension/03. popup_bg_js.md
+++ b/04. Extension/03. popup_bg_js.md
@@ -15,14 +15,29 @@ content.js    : directly work with webpage DOM, need to define "content_scripts"
 ```
 ```js
 // popup.js
-// pass a message to background JS via `chrome.runtime`
+// pass a message to background JS via `chrome.runtime.sendMessage`, and receiving response
+
+// popup.js
 document.getElementById('login').addEventListener('click', () => {
-    const username = document.getElementById("username")
-    const password = document.getElementById("password")
-    chrome.runtime.sendMessage({ action: 'login', username:username, password:password }, (response)=>{
-         if
-       });
+    const username = document.getElementById('username').value;
+    const password = document.getElementById('password').value;
+
+    const message = {
+        action: 'login',
+        username: username,
+        password: password
+    };
+
+    chrome.runtime.sendMessage(message, (response) => {
+        const messageHTML = document.getElementById('message');
+        if (response.status === "success") {
+            messageHTML.innerHTML = response.data;
+        } else {
+            messageHTML.innerHTML = 'Login error: ' + response.data;
+        }
+    });
 });
+
 ```
 ### 02. background.js
 ```json
@@ -32,13 +47,46 @@ document.getElementById('login').addEventListener('click', () => {
 }
 ```
 ```js
+// background js is getting parameter via onMessage and after complete sendResponse
 chrome.runtime.onMessage.addListener((message, sender, sendResponse) => {
-    if (message.action === 'login') {
-        const username = message.username
-        const password = message.password
-        // loginUser(username, password);
+    if (message.action === "login") {
+        const loginUrl = 'https://jusnidee.pythonanywhere.com/api/apilogin/';
+        const loginData = {
+            username: message.username,
+            password: message.password
+        };
+
+        fetch(loginUrl, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(loginData)
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Login failed with status: ' + response.status);
+            }
+            return response.json();
+        })
+        .then(data => {
+            const token = data.access;
+            if (!token) {
+                throw new Error('Token not found in response');
+            }
+            // Save token to chrome.storage
+            chrome.storage.local.set({ authToken: token }, () => console.log('Token saved to storage:'));
+            // Send a success response
+            sendResponse({ status: 'success', data: 'Login Success' });
+        })
+        .catch(error => {
+            console.error('Error during login:', error);
+            sendResponse({ status: 'fail', data: error.toString() });
+        });
+
+        // Return true to indicate that sendResponse will be called asynchronously
+        return true;
     }
 });
+
 ```
 
 
