--- a/04. Extension/03. popup_bg_js.md
+++ b/04. Extension/03. popup_bg_js.md
@@ -42,6 +42,7 @@ document.getElementById('login').addEventListener('click', () => {
 ### 02. background.js
 ```json
 // manifest.json
+"_comment": "comment text goes here...",
 {
     "background": {"service_worker": "./scripts/background.js"},
 }
