--- a/04. Extension/05. chrome_tabs.md
+++ b/04. Extension/05. chrome_tabs.md
@@ -4,9 +4,19 @@
 "permissions": ["tabs","activeTab"]
 }
 ```
-### Open new tab
+### Open new tab with targeted link
 ```js
     function handleLinkClick(visitUrl){
         chrome.tabs.create({ url: visitUrl });
     }
+```
+### Open New tab with Custom HTML File
+```js
+chrome.runtime.onInstalled.addListener(({reason}) => {
+  if (reason === 'install') {
+    chrome.tabs.create({
+      url: "./html/onboarding.html"
+    });
+  }
+});
 ```
