--- a/04. Extension/00. Advance_DOM_event.md
+++ b/04. Extension/00. Advance_DOM_event.md
@@ -1,1 +1,71 @@
-
+### 01. Handle delay
+#### handle with Promise
+```js
+function sleep(ms) {
+  return new Promise(resolve => setTimeout(resolve, ms));
+}
+```
+#### handle with setTimeout
+```js
+setTimeout(() => {
+     ...Task...
+    }, 3000); // 3 seconds delay before task
+  }
+```
+### 02. Wait for a specific DOM element
+```js
+// Set up a MutationObserver to watch for changes in the DOM
+const observer = new MutationObserver((mutationsList, observer) => {
+  const element = document.getElementById("idname");
+  if (element) {
+    element.click(); // Click the button when it appears
+    observer.disconnect(); // Stop observing once the button is clicked
+  }
+});
+// Start observing the document for changes
+observer.observe(document.body, { childList: true, subtree: true });
+```
+### 03. Handle Username input in React App
+```js
+// Custom function to fill username in React-driven forms
+function inputUsername(element, value) {
+  if (element) {
+    // Get the native React property for the element
+    const nativeValueSetter = Object.getOwnPropertyDescriptor(element.__proto__, 'value').set;
+    // Focus the input field
+    element.focus();
+    // Simulate React's state update by directly calling the native value setter
+    nativeValueSetter.call(element, value);
+    // Dispatch input events to notify React of the change
+    const inputEvent = new Event('input', { bubbles: true });
+    element.dispatchEvent(inputEvent);
+    // Optionally trigger change event (React may use it for form submissions)
+    const changeEvent = new Event('change', { bubbles: true });
+    element.dispatchEvent(changeEvent);
+    // Optionally blur the input field to simulate losing focus
+    element.blur();
+  }
+}
+```
+### 04. Handle Password input in React App
+```js
+// Custom function to fill password in React-driven forms
+function inputPassword(element, value) {
+  if (element) {
+    // Get the native React property for the element
+    const nativeValueSetter = Object.getOwnPropertyDescriptor(element.__proto__, 'value').set;
+    // Focus the password field
+    element.focus();
+    // Simulate React's state update by directly calling the native value setter
+    nativeValueSetter.call(element, value);
+    // Dispatch input events to notify React of the change
+    const inputEvent = new Event('input', { bubbles: true });
+    element.dispatchEvent(inputEvent);
+    // Optionally trigger change event (React may use it for form submissions)
+    const changeEvent = new Event('change', { bubbles: true });
+    element.dispatchEvent(changeEvent);
+    // Optionally blur the input field to simulate losing focus
+    element.blur();
+  }
+}
+```
