--- a/04. Extension/00. Advance_DOM_event.md
+++ b/04. Extension/00. Advance_DOM_event.md
@@ -1,4 +1,7 @@
 ### 01. Handle delay
+```
+Remark : for react website manipulation sometime we need to add some dely
+```
 #### handle with Promise
 ```js
 function sleep(ms) {
@@ -47,6 +50,11 @@ function inputUsername(element, value) {
   }
 }
 ```
+```js
+// uses
+const username = document.getElementById('username');
+inputUsername(username, request.username);
+```
 ### 04. Handle Password input in React App
 ```js
 // Custom function to fill password in React-driven forms
@@ -68,4 +76,9 @@ function inputPassword(element, value) {
     element.blur();
   }
 }
+```
+```js
+// uses
+const passwordField = document.querySelector("#password");
+inputPassword(passwordField, request.password)
 ```
