--- a/04. Extension/00. Advance_DOM_event.md
+++ b/04. Extension/00. Advance_DOM_event.md
@@ -2,13 +2,13 @@
 ```
 Remark : for react website manipulation sometime we need to add some dely
 ```
-#### handle with Promise
+#### I. handle with Promise
 ```js
 function sleep(ms) {
   return new Promise(resolve => setTimeout(resolve, ms));
 }
 ```
-#### handle with setTimeout
+#### II. handle with setTimeout
 ```js
 setTimeout(() => {
      ...Task...
