--- a/04. Extension/03. content_popup_bg_JS.md
+++ b/04. Extension/03. content_popup_bg_JS.md
@@ -1,13 +1,30 @@
-## popup.js & background.js
+## content.js & popup.js & background.js
 ```
-popup.js      : directly work always with popup or sidepanel UI DOM
+popup.js      : directly work always with popup or sidepanel UI DOM.
+                popup.js can send message to ` content.js ` and ` background.js `
 background.js : work behind the seem independently, mainly uses for API call, or others,
                 It can interact with any DOM. But can access all chrome API, event
                 `chrome.runtime` API can communicate with popup or web page DOM
                 need to define "background" in manifest.json
 content.js    : directly work with webpage DOM, need to define "content_scripts" in manifest.json
 ```
-### 01. popup.js
+### 01. content.js
+```json
+{
+  "content_scripts":[{
+         "matches" : ["<all_urls>"],
+         "js":["./scripts/content.js"]
+      }],
+}
+```
+```js
+console.log('hello from content js in browser console')
+chrome.runtime.onMessage.addListener(async (request, sender, sendResponse) => {
+   ... recived event from popup.js for task...
+  }
+});
+```
+### 02. popup.js
 ```html
 <body>
     <script src="../scripts/popup.js"></script>
@@ -39,7 +56,7 @@ document.getElementById('login').addEventListener('click', () => {
 });
 
 ```
-### 02. background.js
+### 03. background.js
 ```json
 // manifest.json
 {
