--- a/04. Extension/04. chrome_storage.md
+++ b/04. Extension/04. chrome_storage.md
@@ -44,5 +44,8 @@ chrome.storage.session.get(["key"]).then((result) => {
 ```
 ### 4. Remove Key value
 ```js
+// remove key
+chrome.storage.local/sync/session.remove('key_name',()=> console.log('clear key_name'))
+// remove multiple key
 chrome.storage.local/sync/session.remove(['key_name'],()=> console.log('clear key_name'))
 ```
