--- a/04. Extension/00. Advance_DOM_event.md
+++ b/04. Extension/00. Advance_DOM_event.md
@@ -1,3 +1,28 @@
+### 00. How to select DOM
+```js
+document.getElementById('id_name')                 // id="menu"
+document.getElementsByClassName('class_name')[0]   // class="menu"
+document.getElementsByTagName('html_tag_name')[0]  // h2. p, button
+
+document.getElementBy...('parent').childNodes      // NodeList
+document.getElementBy...('parent').children        // HTMLCollection
+
+document.getElementById('myElement').matches('.className')  //  Match
+document.getElementById('child').parentNode                 // parent node of selected element
+document.getElementById('current').previousSibling          // previous HTML element of selected element
+
+document.querySelector('#menu/.menu')             // with class name or id name
+document.querySelector('div > p')                 //  Nested Elements:
+document.querySelector('[data-role="admin"]')     // Attribute Selector, Attribute can be anything, class, id, href, name, src etc all
+// Adavance query selector
+document.querySelector('ul li:first-child')
+document.querySelector('ul li:last-child')
+document.querySelector('ul li:nth-child(2)')
+
+// query Selector All
+document.querySelectorAll(' same of querySelector ')
+
+```
 ### 01. Handle delay
 ```
 Remark : for react website manipulation sometime we need to add some dely
