--- a/04. Extension/00. Advance_DOM_event.md
+++ b/04. Extension/00. Advance_DOM_event.md
@@ -1,27 +1,42 @@
 ### 00. How to select DOM
 ```js
-document.getElementById('id_name')                 // id="menu"
-document.getElementsByClassName('class_name')[0]   // class="menu"
-document.getElementsByTagName('html_tag_name')[0]  // h2. p, button
+// HTML Collections
+// These methods return live HTMLCollections:
+document.getElementById('id_name')                 // id="menu" (single element, not HTMLCollection)
+document.getElementsByClassName('class_name')[0]   // class="menu" (HTMLCollection, first element)
+document.getElementsByTagName('html_tag_name')[0]  // h2, p, button (HTMLCollection, first element)
 
-document.getElementBy...('parent').childNodes      // NodeList
-document.getElementBy...('parent').children        // HTMLCollection
+// These return HTMLCollection
+document.getElementById('parent').children          // HTMLCollection of child elements
 
-document.getElementById('myElement').matches('.className')  //  Match
-document.getElementById('child').parentNode                 // parent node of selected element
-document.getElementById('current').previousSibling          // previous HTML element of selected element
+// Node
+// These methods return nodes or NodeLists:
+document.getElementById('parent').childNodes       // child nodes of selected element (NodeList)
+document.getElementById('child').parentNode         // parent node of selected element (Node)
+document.getElementById('current').previousSibling  // previous sibling node of selected element (Node)
+document.getElementById('current').nextSibling      // next sibling node of selected element (Node)
 
-document.querySelector('#menu/.menu')             // with class name or id name
-document.querySelector('div > p')                 //  Nested Elements:
-document.querySelector('[data-role="admin"]')     // Attribute Selector, Attribute can be anything, class, id, href, name, src etc all
-// Adavance query selector
-document.querySelector('ul li:first-child')
-document.querySelector('ul li:last-child')
-document.querySelector('ul li:nth-child(2)')
+// Element Matching
+// This method returns a boolean value:
+document.getElementById('myElement').matches('.className')  // Match (boolean)
 
-// query Selector All
-document.querySelectorAll(' same of querySelector ')
+// Query Selector
+// These methods return a single node (element):
+document.querySelector('#menu')             // with id name (first matching element)
+document.querySelector('.menu')             // with class name (first matching element)
+document.querySelector('div > p')           // Nested elements (first matching element)
+document.querySelector('[data-role="admin"]') // Attribute selector (first matching element)
 
+// Advanced Query Selectors
+// These methods return a single node (element):
+document.querySelector('ul li:first-child')   // first <li> in each <ul> (first matching element)
+document.querySelector('ul li:last-child')    // last <li> in each <ul> (first matching element)
+document.querySelector('ul li:nth-child(2)')  // second <li> in each <ul> (first matching element)
+
+// Query Selector All
+// These methods return NodeLists:
+document.querySelectorAll('.menu')            // all elements with class="menu" (NodeList)
+document.querySelectorAll('ul li:nth-child(2)') // all second <li> elements in each <ul> (NodeList)
 ```
 ### 01. Handle delay
 ```
