--- a/04. Extension/00. Node_and_HTMLCollection.md
+++ b/04. Extension/00. Node_and_HTMLCollection.md
@@ -1,40 +1,32 @@
 ### 01. How to select DOM
 ```js
-// HTML Collections
-// These methods return live HTMLCollections:
+// Return live HTMLCollections:
 document.getElementById('id_name')                 // id="menu" (single element, not HTMLCollection)
 document.getElementsByClassName('class_name')[0]   // class="menu" (HTMLCollection, first element)
 document.getElementsByTagName('html_tag_name')[0]  // h2, p, button (HTMLCollection, first element)
-
-// These return HTMLCollection
 document.getElementById('parent').children          // HTMLCollection of child elements
 
-// Node
-// These methods return nodes or NodeLists:
+// Return nodes or NodeLists:
 document.getElementById('parent').childNodes       // child nodes of selected element (NodeList)
 document.getElementById('child').parentNode         // parent node of selected element (Node)
 document.getElementById('current').previousSibling  // previous sibling node of selected element (Node)
 document.getElementById('current').nextSibling      // next sibling node of selected element (Node)
 
-// Element Matching
-// This method returns a boolean value:
+// Returns a boolean value:
 document.getElementById('myElement').matches('.className')  // Match (boolean)
 
-// Query Selector
-// These methods return a single node (element):
+// Return a single node (element):
 document.querySelector('#menu')             // with id name (first matching element)
 document.querySelector('.menu')             // with class name (first matching element)
 document.querySelector('div > p')           // Nested elements (first matching element)
 document.querySelector('[data-role="admin"]') // Attribute selector (first matching element)
-
 // Advanced Query Selectors
-// These methods return a single node (element):
 document.querySelector('ul li:first-child')   // first <li> in each <ul> (first matching element)
 document.querySelector('ul li:last-child')    // last <li> in each <ul> (first matching element)
 document.querySelector('ul li:nth-child(2)')  // second <li> in each <ul> (first matching element)
 
-// Query Selector All
 // These methods return NodeLists:
+// Query Selector All
 document.querySelectorAll('.menu')            // all elements with class="menu" (NodeList)
 document.querySelectorAll('ul li:nth-child(2)') // all second <li> elements in each <ul> (NodeList)
 ```
