--- a/04. Extension/00. Node_and_HTMLCollection.md
+++ b/04. Extension/00. Node_and_HTMLCollection.md
@@ -54,7 +54,7 @@ element.outerHTML = '<div class="outer">Outer content</div>'; // Sets HTML conte
 element.setAttribute('class', 'newClass');          // Sets 'class' attribute to 'newClass'
 let className = element.getAttribute('class');      // Gets the value of 'class' attribute
 element.removeAttribute('class');                   // Removes 'class' attribute
-element.classList.add('newClass');                  // Adds 'newClass' to class list
+element.classList.add('newClass'/['cls1','cls2']);  // Adds 'newClass' to class list
 element.classList.remove('oldClass');               // Removes 'oldClass' from class list
 element.classList.toggle('toggleClass');            // Toggles 'toggleClass' class on element
 let hasClass = element.classList.contains('className'); // Checks if 'className' is present
