--- a/04. Extension/00. Node_and_HTMLCollection.md
+++ b/04. Extension/00. Node_and_HTMLCollection.md
@@ -57,6 +57,7 @@ element.removeAttribute('class');                   // Removes 'class' attribute
 element.classList.add('newClass'/['cls1','cls2']);  // Adds 'newClass' to class list
 element.classList.remove('oldClass');               // Removes 'oldClass' from class list
 element.classList.toggle('toggleClass');            // Toggles 'toggleClass' class on element
+element.id.add('name');                             // Adds 'name' to id
 let hasClass = element.classList.contains('className'); // Checks if 'className' is present
 element.style.color = 'red';                        // Sets inline style for the element
 let dataValue = element.dataset.role;               // Accesses data attribute (e.g., data-role)
