--- a/04. Extension/00. Node_and_HTMLCollection.md
+++ b/04. Extension/00. Node_and_HTMLCollection.md
@@ -9,6 +9,7 @@ document.getElementById('parent').children          // HTMLCollection of child e
 // Return nodes or NodeLists:
 document.getElementById('parent').childNodes       // child nodes of selected element (NodeList)
 document.getElementById('child').parentNode         // parent node of selected element (Node)
+document.getElementById('child').parentElement       // parent element of selected element (Node)
 document.getElementById('current').previousSibling   // previous sibling node of selected element (Node)
 document.getElementById('current').nextElementSibling // next sibling node of selected element (Node)
 
