--- a/04. Extension/04. content_popup_bg_JS.md
+++ b/04. Extension/04. content_popup_bg_JS.md
@@ -55,6 +55,38 @@ document.getElementById('login').addEventListener('click', () => {
     });
 });
 
+// send message for content js
+```js
+// data render
+websiteList.map(data => {
+            // Create the outer div container
+             <p>data.name</p>
+            // Add an event listener
+            loginButton.addEventListener('click', () => {
+                handleLoginClick(data);
+            });
+        });
+// handleLoginClick send message to content js
+function handleLoginClick(data) {
+    // Query the active tab
+    chrome.tabs.query({ active: true, currentWindow: true }, (tabs) => {
+        const currentTab = tabs[0];
+
+        // Check if the URL is an internal Chrome URL
+        if (currentTab.url.startsWith('chrome://') || currentTab.url.startsWith('chrome-extension://')) {
+            return;
+        }
+
+        // Send the data to content.js if it's not an internal Chrome page
+        chrome.tabs.sendMessage(currentTab.id, {
+            action: "fillForm",
+            data1: data.data1,
+            data2: data.data2
+        });
+    });
+}
+```
+
 ```
 ### 03. background.js
 ```json
