--- a/04. Extension/04. content_popup_bg_JS.md
+++ b/04. Extension/04. content_popup_bg_JS.md
@@ -20,6 +20,7 @@ content.js    : directly work with webpage DOM, need to define "content_scripts"
 ```js
 console.log('hello from content js in browser console')
 chrome.runtime.onMessage.addListener(async (request, sender, sendResponse) => {
+ if (request.action === "fillForm"){
    ... recived event from popup.js for task...
   }
 });
