--- a/04. Extension/01. Advance_DOM_event.md
+++ b/04. Extension/01. Advance_DOM_event.md
@@ -82,3 +82,23 @@ function inputPassword(element, value) {
 const passwordField = document.querySelector("#password");
 inputPassword(passwordField, request.password)
 ```
+### 05. Handle any Text input
+```js
+function inputText(element, value){
+  const element = document.querySelector(elementSelector);
+  if (element) {
+      element.focus();
+      element.innerText = value;
+      const inputEvent = new Event('input', { bubbles: true });
+      element.dispatchEvent(inputEvent);
+      const changeEvent = new Event('change', { bubbles: true });
+      element.dispatchEvent(changeEvent);
+      element.blur();
+  }
+}
+```
+```js
+// uses
+const textField = document.querySelector("p[data-testid='editorParagraphText']");
+inputText(textField, request.inputText)
+```
