--- a/04. Extension/01. Advance_DOM_event.md
+++ b/04. Extension/01. Advance_DOM_event.md
@@ -102,3 +102,72 @@ function inputText(element, value){
 const textField = document.querySelector("p[data-testid='editorParagraphText']");
 inputText(textField, request.inputText)
 ```
+### 06. Select CSS Path
+```js
+(function () {
+  // Add styles for highlighting the hovered element
+  const style = document.createElement('style');
+  style.innerHTML = `
+    .element-highlight {
+      outline: 2px dashed red;
+      cursor: crosshair;
+    }
+  `;
+  document.head.appendChild(style);
+
+  // Mouseover event to add highlight class
+  const handleMouseOver = (event) => {
+    event.target.classList.add('element-highlight');
+  };
+
+  // Mouseout event to remove highlight class
+  const handleMouseOut = (event) => {
+    event.target.classList.remove('element-highlight');
+  };
+
+  // Click event to capture the element's selector
+  const handleClick = (event) => {
+    event.preventDefault();
+    event.stopPropagation();
+
+    // Generate a unique CSS selector for the clicked element
+    const getSelector = (element) => {
+      if (!element || element.tagName === 'HTML') return 'html';
+      if (element.id) return `#${element.id}`;
+      if (element.className) {
+        const classes = element.className.trim().split(/\s+/).join('.');
+        return `${element.tagName.toLowerCase()}.${classes}`;
+      }
+      return element.tagName.toLowerCase();
+    };
+
+    const path = [];
+    let el = event.target;
+    while (el && el.tagName !== 'HTML') {
+      path.unshift(getSelector(el));
+      el = el.parentElement;
+    }
+    const selector = path.join(' > ');
+
+    // Log the selector to the console
+    console.log('Element Selector:', selector);
+
+    // Remove event listeners to stop further interaction
+    document.removeEventListener('mouseover', handleMouseOver);
+    document.removeEventListener('mouseout', handleMouseOut);
+    document.removeEventListener('click', handleClick);
+
+    // Remove the highlight style
+    document.head.removeChild(style);
+
+    alert(`Selector: ${selector}`);
+  };
+
+  // Add event listeners to the document
+  document.addEventListener('mouseover', handleMouseOver);
+  document.addEventListener('mouseout', handleMouseOut);
+  document.addEventListener('click', handleClick);
+
+  alert('Element selection mode activated. Hover to highlight, click to select.');
+})();
+```
